...
            "state" : "translated",
            "value" : "No Answer Yet"
          }
        }
      }
    },
    "Annulla" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
...
            "state" : "translated",
            "value" : "Branch"
          }
        }
      }
    },
    "Bubo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bubo"
          }
...
            "state" : "translated",
            "value" : "Check for updates automatically"
          }
        }
      }
    },
    "Controlla aggiornamenti…" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Check for Updates…"
          }
...
            "state" : "translated",
            "value" : "Debug Orb"
          }
        }
      }
    },
    "Debug Orb…" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Debug Orb…"
...
            "state" : "translated",
            "value" : "Done"
          }
        }
      }
    },
    "Finestra" : {
      "comment" : "File name of a window shot, before .png",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Window"
...
            "state" : "translated",
            "value" : "new"
          }
        }
      }
    },
    "Nuova Automazione" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New Automation"
          }
...
            "state" : "translated",
            "value" : "Turn into Session on %@"
          }
        }
      }
    },
    "Trova i TODO più vecchi" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Find the oldest TODOs"
          }
...
